# HxLanguage

./: .clang-format  .project  CMakeLists.txt  HxLanguage语法高亮_MTManager.mtsx  README.md  README.md.bak  config.h.in  config.txt  out.hxo  test.hxl  格式化.sh
OpenNote/: .html
src/HXC/: Android调试.sh  Checker.h  Error.h  Generator.h  IR.h  Lexer.h  Main.c  Main.cpp  ObjectCode.h  Parser.h  Pass.h  Scanner.h  SymbolTable.h  a.out  compiler.h  config.h  debug.sh  lexer.h  objectCode.h  objectCodeStruct.h  output.h  parseEXP.h  scanner.h  test.hxl  test2.hxl  theFirstPass.h  writer.h
src/HXC/hxc_deb/DEBIAN/: control
src/HXC/hxc_deb/usr/share/applications/: hxc.desktop
src/HXVM/: Android调试.sh  HXVM.h  HxVector.h  Interpreter.h  Main.c  Main.cpp  ObjectReader.h  VM.h  config.h  hsmLoader.h  hxLocale.h  hxSymbolTable.h  hxvm  interpreter.h  vm.c  vm.h
test/: out.hxo  test.hxl
